k8s_setup/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: 192.168.82.89:5000/keycloak/keycloak:24.0.5
        args: ["start"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /opt/keycloak/data
          name: keycloak-data
        - mountPath: /opt/keycloak/conf
          name: keycloak-tls
          readOnly: true
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-pvc
      - name: keycloak-tls
        secret:
          secretName: keycloak-tls
